# Sonify

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  PROJECT_STRUCTURE.md  README.md  app.py  config.py  docker-compose.yml  env.example  pyproject.toml  quickstart.py  requirements.txt  run.py  setup.py  utils.py
static/css/: style.css
static/exports/: .gitkeep
static/js/: app.js
templates/: base.html  dashboard.html  index.html  insights.html  mood_analysis.html  visualizations.html
tests/: __init__.py  test_app.py
